syntax = "proto3";

message main {

    //Buffer containing authentication information
    bytes auth = 10;

    // The receiver replaces its existing state with objAll
    // obj objAll = 20;

    // The receiver adds all values to the existing state. Creates or updates values depending on the situation. All containing objects/structs are created.
    // obj objSync = 21;

    // First, the receiver removes all VALUES that are PRESENT here, then it removes all empty objects/structs
    // objBool objDelete = 22;
    
    // RPC object for sending requests. 
    map <uint32, rpcCall> reqRpc = 41;
    map <uint32, rpcCall> reqRpcOrdered = 42;
    map <uint32, rpcCall> resRpc = 51;

    repeated bytes events = 61;
    repeated bytes eventsOrdered = 62;

    uint32 code = 101;
    repeated uint32 codes = 102;

    string reason = 103;
}

message rpcCall {
    bytes args = 1;
    bytes returns = 2;
    // enum method = 3;
    bool isError = 4;
}